main/default/objects/AccountReference__c/AccountReference__c.object-meta.xml
<CustomObject>
    <description>Redundant &quot;ghost&quot; object that has just a few fields that inherit their values from the account like account name, address, owner and sales channel</description>
    <label>Account Reference</label>
    <nameField>
        <label>Account Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>