main/default/objects/AccountReference__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account this record is associated with.</description>
    <inlineHelpText>Account this record is associated with.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>All_Accounts_Account</relationshipName>
    <type>Lookup</type>
</CustomField>