main/default/objects/AccountReference__c/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <description>Formula field that gets the Owner ID from the Account.</description>
    <formula>Account__r.Owner.FirstName   &amp; &quot; &quot; &amp; Account__r.Owner.LastName</formula>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>