main/default/objects/AccountReference__c/fields/Open_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Open_Prospect__c</fullName>
    <description>Open for Prospecting checkbox</description>
    <formula>Account__r.Open_Prospect__c</formula>
    <inlineHelpText>Indicates if a prospect is open for prospecting</inlineHelpText>
    <label>Open Prospect</label>
    <type>Checkbox</type>
</CustomField>