main/default/objects/AccountReference__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Text field that is populated from a trigger to keep it in sync with the Account.</description>
    <inlineHelpText>Main Business Phone</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>