main/default/objects/AccountReference__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <description>Formula field that gets the Sales Channel from the Account.</description>
    <formula>Account__r.Owners_Sales_Channel__c</formula>
    <label>Sales Channel</label>
    <type>Text</type>
</CustomField>