main/default/objects/AccountReference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Owner_Name__c</columns>
    <columns>ICC_Account_Number__c</columns>
    <columns>Phone__c</columns>
    <columns>Sales_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>